# weaveffi

./: .gitignore  .releaserc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  OVERHAUL_SPEC.md  README.md  SECURITY.md  clippy.toml  deny.toml  justfile  package-lock.json  package.json  weaveffi.schema.json
crates/weaveffi/: Cargo.toml
crates/weaveffi-abi/: Cargo.toml
crates/weaveffi-abi/src/: arena.rs  convert.rs  lib.rs  macros.rs
crates/weaveffi-abi/tests/: export_runtime.rs
crates/weaveffi-bridge/: Cargo.toml
crates/weaveffi-bridge/src/: lib.rs
crates/weaveffi-cli/: Cargo.toml
crates/weaveffi-cli/benches/: generate_bench.rs
crates/weaveffi-cli/src/: config.rs  doctor.rs  extract.rs  main.rs  report.rs  scaffold.rs  upgrade.rs
crates/weaveffi-cli/src/commands/: diff.rs  format.rs  generate.rs  mod.rs  new.rs  package.rs  validate.rs  watch.rs
crates/weaveffi-cli/tests/: bytes_return_free_audit.rs  cli_async.rs  cli_async_parity.rs  cli_builders.rs  cli_bytes_abi_parity.rs  cli_c_prefix.rs  cli_c_prefix_parity.rs  cli_callbacks.rs  cli_cancellation_parity.rs  cli_check.rs  cli_contacts.rs  cli_cpp.rs  cli_dart.rs  cli_diagnostics.rs  cli_diff.rs  cli_doctor.rs  cli_dotnet.rs  cli_dry_run_paths.rs  cli_errors.rs  cli_extract.rs  cli_format.rs  cli_formats.rs  cli_generate.rs  cli_go.rs  cli_inline_generators.rs  cli_inventory.rs  cli_iterators.rs  cli_json_output.rs  cli_kvstore.rs  cli_lint.rs  cli_listeners.rs  cli_package.rs  cli_python.rs  cli_ruby.rs  cli_schema.rs  cli_schema_version.rs  cli_string_abi_parity.rs  cli_upgrade.rs  determinism.rs  docs_examples.rs  (+8 more)
crates/weaveffi-cli/tests/fixtures/: 01_calculator.yml  02_contacts.yml  03_inventory.yml  04_async_demo.yml  05_events.yml  06_kitchen_sink.yml  07_docs_everywhere.yml  08_kvstore.yml  09_nested_modules.yml  10_shapes.yml  kitchen_sink_annotated.rs
crates/weaveffi-cli/tests/snapshots/: android_async_demo__src_main_cpp_weaveffi_jni_c.snap  android_async_demo__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_calculator__settings_gradle.snap  android_calculator__src_main_cpp_weaveffi_jni_c.snap  android_calculator__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_contacts__src_main_cpp_CMakeLists_txt.snap  android_contacts__src_main_cpp_weaveffi_jni_c.snap  android_contacts__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_docs_everywhere__build_gradle.snap  android_docs_everywhere__src_main_cpp_weaveffi_jni_c.snap  android_docs_everywhere__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_events__build_gradle.snap  android_events__src_main_cpp_CMakeLists_txt.snap  android_events__src_main_cpp_weaveffi_jni_c.snap  android_events__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_inventory__build_gradle.snap  android_inventory__src_main_cpp_CMakeLists_txt.snap  android_inventory__src_main_cpp_weaveffi_jni_c.snap  android_inventory__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_kitchen_sink__settings_gradle.snap  android_kitchen_sink__src_main_cpp_weaveffi_jni_c.snap  android_kitchen_sink__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_kvstore__src_main_cpp_weaveffi_jni_c.snap  android_kvstore__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_nested_modules__settings_gradle.snap  android_nested_modules__src_main_cpp_weaveffi_jni_c.snap  android_nested_modules__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  android_shapes__src_main_cpp_weaveffi_jni_c.snap  android_shapes__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap  c_async_demo__weaveffi_c.snap  c_async_demo__weaveffi_h.snap  c_calculator__weaveffi_h.snap  c_contacts__weaveffi_c.snap  c_contacts__weaveffi_h.snap  c_docs_everywhere__weaveffi_c.snap  c_docs_everywhere__weaveffi_h.snap  (+244 more)
crates/weaveffi-core/: Cargo.toml
crates/weaveffi-core/benches/: codegen_bench.rs
crates/weaveffi-core/src/: cabi.rs  cache.rs  capabilities.rs  codegen.rs  config.rs  errors.rs  lib.rs  package.rs  pkg.rs  plan.rs  platform.rs  templates.rs  utils.rs  validate.rs
crates/weaveffi-core/tests/: codegen_hooks.rs
crates/weaveffi-fuzz/: Cargo.toml  README.md
crates/weaveffi-fuzz/fuzz_targets/: fuzz_validate.rs  lib.rs  parse_json.rs  parse_toml.rs  parse_type_ref.rs  parse_yaml.rs
crates/weaveffi-fuzz/tests/: seeds.rs
crates/weaveffi-gen-android/: Cargo.toml
crates/weaveffi-gen-android/src/: lib.rs
crates/weaveffi-gen-c/: Cargo.toml
crates/weaveffi-gen-c/src/: lib.rs
crates/weaveffi-gen-c/tests/: render_samples.rs
crates/weaveffi-gen-cpp/: Cargo.toml
crates/weaveffi-gen-cpp/src/: lib.rs
crates/weaveffi-gen-dart/: Cargo.toml
crates/weaveffi-gen-dart/src/: lib.rs
crates/weaveffi-gen-dotnet/: Cargo.toml
crates/weaveffi-gen-dotnet/src/: lib.rs
crates/weaveffi-gen-go/: Cargo.toml
crates/weaveffi-gen-go/src/: lib.rs
crates/weaveffi-gen-node/: Cargo.toml
crates/weaveffi-gen-node/src/: lib.rs
crates/weaveffi-gen-python/: Cargo.toml
crates/weaveffi-gen-python/src/: lib.rs
crates/weaveffi-gen-ruby/: Cargo.toml
crates/weaveffi-gen-ruby/src/: lib.rs
crates/weaveffi-gen-swift/: Cargo.toml
crates/weaveffi-gen-swift/src/: lib.rs
crates/weaveffi-gen-wasm/: Cargo.toml
crates/weaveffi-gen-wasm/src/: lib.rs
crates/weaveffi-ir/: Cargo.toml
crates/weaveffi-ir/src/: ir.rs  lib.rs  parse.rs
crates/weaveffi-ir/tests/: regen_schema.rs
crates/weaveffi-macros/: Cargo.toml
crates/weaveffi-macros/src/: codegen.rs  lib.rs
crates/weaveffi/src/: lib.rs
crates/weaveffi/tests/: runtime.rs
examples/cpp/calculator/: CMakeLists.txt  README.md  main.cpp
examples/cpp/contacts/: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/cpp/sqlite-contacts/: CMakeLists.txt  README.md  iter_contacts.cpp  iter_contacts.hpp  main.cpp
samples/http-fetch/: Cargo.toml  README.md  http_fetch.yml
samples/http-fetch/src/: lib.rs
samples/node-addon/: Cargo.toml  README.md
samples/node-addon/src/: lib.rs
samples/sqlite-contacts/: Cargo.toml  README.md  sqlite_contacts.yml
samples/sqlite-contacts/src/: lib.rs
(+259 files in other folders)
