[workspace]
members = [
    "crates/weaveffi-ir",
    "crates/weaveffi-core",
    "crates/weaveffi-gen-c",
    "crates/weaveffi-gen-swift",
    "crates/weaveffi-gen-android",
    "crates/weaveffi-gen-node",
    "crates/weaveffi-node-addon",
    "crates/weaveffi-cli",
    "samples/calculator",
]
resolver = "2"

default-members = [
    "crates/weaveffi-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WeaveFFI Contributors"]
repository = "https://github.com/weavefoundry/weave-ffi"
description = "WeaveFFI: Rust core with stable C ABI and multi-language bindings"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
camino = "1.1"
indoc = "2"
semver = "1.0"
rayon = "1.8"
convert_case = "0.6"
heck = "0.5"
tera = "1.19"
walkdir = "2.5"
fs_err = "3.0"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.metadata.weaveffi]
# placeholder for generator templates path

