[workspace]
members = [
    "crates/weaveffi-ir",
    "crates/weaveffi-abi",
    "crates/weaveffi-core",
    "crates/weaveffi-gen-c",
    "crates/weaveffi-gen-swift",
    "crates/weaveffi-gen-android",
    "crates/weaveffi-gen-node",
    "crates/weaveffi-gen-wasm",
    "crates/weaveffi-gen-python",
    "crates/weaveffi-gen-dotnet",
    "crates/weaveffi-cli",
    "samples/calculator",
    "samples/node-addon",
    "samples/contacts",
    "samples/inventory",
]
resolver = "2"

default-members = [
    "crates/weaveffi-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WeaveFFI Contributors"]
repository = "https://github.com/weavefoundry/weaveffi"
description = "WeaveFFI: Rust core with stable C ABI and multi-language bindings"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
camino = "1.1"
sha2 = "0.10"
heck = "0.5"
color-eyre = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
similar = "2.0"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
