[package]
name = "weaveffi-bridge"
version = "0.15.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Extract a WeaveFFI IR Api from annotated Rust source (the shared bridge used by the proc-macros and the CLI)"
keywords = ["ffi", "codegen", "proc-macro", "bindings", "weaveffi"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-ir = { path = "../weaveffi-ir", version = "0.15.0" }
syn = { workspace = true }

[lints]
workspace = true
