[package]
name = "weaveffi-cli"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line tool for generating multi-language FFI bindings from API definitions"
keywords = ["ffi", "codegen", "bindings", "cli", "code-generation"]
categories = ["development-tools::ffi", "command-line-utilities"]
exclude = [
    "tests/fixtures/**",
    "tests/snapshots/**",
]

[[bin]]
name = "weaveffi"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
miette = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
weaveffi-core = { path = "../weaveffi-core", version = "0.3.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.3.0" }
weaveffi-gen-c = { path = "../weaveffi-gen-c", version = "0.3.0" }
weaveffi-gen-swift = { path = "../weaveffi-gen-swift", version = "0.3.0" }
weaveffi-gen-android = { path = "../weaveffi-gen-android", version = "0.3.0" }
weaveffi-gen-node = { path = "../weaveffi-gen-node", version = "0.3.0" }
weaveffi-gen-wasm = { path = "../weaveffi-gen-wasm", version = "0.3.0" }
weaveffi-gen-python = { path = "../weaveffi-gen-python", version = "0.3.0" }
weaveffi-gen-dotnet = { path = "../weaveffi-gen-dotnet", version = "0.3.0" }
weaveffi-gen-cpp = { path = "../weaveffi-gen-cpp", version = "0.3.0" }
weaveffi-gen-dart = { path = "../weaveffi-gen-dart", version = "0.3.0" }
weaveffi-gen-go = { path = "../weaveffi-gen-go", version = "0.3.0" }
weaveffi-gen-ruby = { path = "../weaveffi-gen-ruby", version = "0.3.0" }
syn = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
notify = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "generate_bench"
harness = false

[lints]
workspace = true
