[package]
name = "weaveffi-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generator trait, orchestrator, validation, and shared utilities for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "code-generation", "validation"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-ir = { path = "../weaveffi-ir", version = "0.1.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
