[package]
name = "weaveffi-core"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generator trait, orchestrator, validation, and shared utilities for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "code-generation", "validation"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-ir = { path = "../weaveffi-ir", version = "0.3.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tera = { workspace = true }
toml = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "codegen_bench"
harness = false

[lints]
workspace = true
