[package]
name = "weaveffi-gen-android"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Android JNI and Kotlin binding generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "android", "kotlin"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.0.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.0.0" }
anyhow = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
