[package]
name = "weaveffi-gen-android"
version = "0.14.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Android JNI and Kotlin binding generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "android", "kotlin"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.14.1" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.14.1" }
camino = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
weaveffi-gen-c = { path = "../weaveffi-gen-c", version = "0.14.1" }

[lints]
workspace = true
