[package]
name = "weaveffi-gen-c"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "C header and source file generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "c", "header"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.3.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.3.0" }
anyhow = { workspace = true }
camino = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
