[package]
name = "weaveffi-gen-cpp"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WeaveFFI C++ RAII wrapper generator"
keywords = ["ffi", "codegen", "bindings", "cpp", "raii"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.2.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.2.0" }
anyhow = { workspace = true }
camino = { workspace = true }
heck = { workspace = true }

[lints]
workspace = true
