[package]
name = "weaveffi-gen-dotnet"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WeaveFFI .NET P/Invoke binding generator"
keywords = ["ffi", "codegen", "bindings", "dotnet", "csharp"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.3.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.3.0" }
anyhow = { workspace = true }
camino = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
