[package]
name = "weaveffi-gen-dotnet"
version = "0.14.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WeaveFFI .NET P/Invoke binding generator"
keywords = ["ffi", "codegen", "bindings", "dotnet", "csharp"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.14.1" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.14.1" }
camino = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
