[package]
name = "weaveffi-gen-node"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js N-API and TypeScript binding generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "nodejs", "typescript"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.3.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.3.0" }
anyhow = { workspace = true }
camino = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
