[package]
name = "weaveffi-gen-swift"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Swift package and bridging code generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "swift", "ios"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.0.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.0.0" }
anyhow = { workspace = true }
camino = { workspace = true }
heck = { workspace = true }

[lints]
workspace = true
