[package]
name = "weaveffi-gen-swift"
version = "0.12.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Swift package and bridging code generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "swift", "ios"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.12.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.12.0" }
camino = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
