[package]
name = "weaveffi-gen-wasm"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly binding generator for WeaveFFI"
keywords = ["ffi", "codegen", "bindings", "wasm", "webassembly"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-core = { path = "../weaveffi-core", version = "0.2.0" }
weaveffi-ir = { path = "../weaveffi-ir", version = "0.2.0" }
anyhow = { workspace = true }
camino = { workspace = true }

[lints]
workspace = true
