[package]
name = "weaveffi-ir"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Intermediate representation model and multi-format parser for WeaveFFI API definitions"
keywords = ["ffi", "codegen", "bindings", "intermediate-representation", "parser"]
categories = ["development-tools::ffi"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
