[package]
name = "weaveffi"
version = "0.12.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Write safe Rust, get a stable C ABI and bindings for 11 languages"
keywords = ["ffi", "abi", "bindings", "codegen", "proc-macro"]
categories = ["development-tools::ffi"]

[dependencies]
weaveffi-abi = { path = "../weaveffi-abi", version = "0.12.0" }
weaveffi-macros = { path = "../weaveffi-macros", version = "0.12.0" }

[lints]
workspace = true
