[package]
name = "weaveffi-node-addon"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "index"

[dependencies]
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
once_cell = "1"
libloading = "0.8"
weaveffi-abi = { path = "../../crates/weaveffi-abi" }

[build-dependencies]
napi-build = "2"

[package.metadata.cargo-machete]
# Used in build.rs (napi_build::setup()); cargo-machete only inspects src/.
ignored = ["napi-build"]

[lints]
workspace = true
